--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -1,83 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ll_container"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_dashboard_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="end">
 
-    <include layout="@layout/general_toolbar" />
-
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/ll_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_projectlist"
-            android:layout_width="match_parent"
-            android:layout_marginBottom="48dp"
-            android:layout_height="wrap_content" />
+        <include layout="@layout/general_toolbar" />
 
-        <LinearLayout
-            android:id="@+id/ll_nodata"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ProgressBar
-                android:id="@+id/prgbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_projectlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="48dp" />
 
-            <TextView
-                android:id="@+id/tv_nodata"
+            <LinearLayout
+                android:id="@+id/ll_nodata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Loading please wait"
-                android:textColor="@color/secondaryColor"
-                android:textSize="16sp" />
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_resync"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/primaryColor"
-                app:cardCornerRadius="8dp"
-                android:layout_marginTop="16dp"
-                app:cardUseCompatPadding="true"
-                app:contentPadding="8dp">
+                <ProgressBar
+                    android:id="@+id/prgbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/tv_nodata"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/primaryColor"
-                    android:text="Sync project again"
-                    android:textColor="@android:color/white" />
+                    android:layout_marginTop="8dp"
+                    android:text="Loading please wait"
+                    android:textColor="@color/secondaryColor"
+                    android:textSize="16sp" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_resync"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:cardBackgroundColor="@color/primaryColor"
+                    app:cardCornerRadius="8dp"
+                    app:cardUseCompatPadding="true"
+                    app:contentPadding="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@color/primaryColor"
+                        android:text="Sync project again"
+                        android:textColor="@android:color/white" />
 
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
 
-        </LinearLayout>
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_sync_project"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/primaryColor"
-            android:drawableRight="@drawable/ic_keyboard_arrow_right_legacy_24dp"
-            android:gravity="end|center_vertical"
-            android:padding="8dp"
-            android:text="Sync Projects"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.SyncProjectsSubtitle"
-            android:textColor="@color/white"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/tv_sync_project"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/primaryColor"
+                android:drawableRight="@drawable/ic_keyboard_arrow_right_legacy_24dp"
+                android:gravity="end|center_vertical"
+                android:padding="8dp"
+                android:text="Sync Projects"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.SyncProjectsSubtitle"
+                android:textColor="@color/white"
+                android:visibility="gone" />
 
-    </RelativeLayout>
-</LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/activity_dashboard_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#ffff"
+        android:overScrollMode="always"
+        app:headerLayout="@layout/navigation_header"
+        app:menu="@menu/navigation_view_items_project" />
+</androidx.drawerlayout.widget.DrawerLayout>
