--- a/collect_app/src/main/res/layouts/fieldsight/layout/list_item_fieldsight_form.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/list_item_fieldsight_form.xml
@@ -2,19 +2,16 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/card_view_form_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/margin_small"
     android:layout_marginRight="@dimen/margin_small"
     android:background="@android:color/white"
-    app:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
-    card_view:cardElevation="@dimen/card_recycler_elevation">
+    app:cardCornerRadius="@dimen/corner_radius"
+    app:cardElevation="@dimen/elevation_card_resting">
 
     <RelativeLayout
-
         android:id="@+id/rl_form_list_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,11 +22,11 @@
             android:layout_width="@dimen/icon_width_height"
             android:layout_height="@dimen/icon_width_height"
 
-            android:layout_marginBottom="@dimen/margin_large"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="21dp"
             android:layout_marginEnd="@dimen/margin_large"
             android:layout_marginRight="@dimen/margin_large"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="21dp">
+            android:layout_marginBottom="@dimen/margin_large">
 
 
             <ImageView
@@ -50,9 +47,9 @@
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
                 android:background="@drawable/circle_green"
                 android:src="@drawable/ic_check"
                 android:visibility="gone" />
@@ -86,11 +83,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_form_secondary"
-            android:layout_marginLeft="65dp"
             android:layout_marginStart="65dp"
+            android:layout_marginLeft="65dp"
             android:minWidth="0dp"
-            android:paddingEnd="8dp"
             android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="@string/btn_previous_submissions" />
 
         <Button
@@ -102,31 +99,6 @@
             android:layout_toEndOf="@id/btn_form_responses"
             android:layout_toRightOf="@id/btn_form_responses"
             android:text="@string/btn_education_materials" />
-
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/btn_expand_card"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/tv_form_secondary"
-            android:layout_marginBottom="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="6dp"
-            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />
-
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_form_subtext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/btn_form_edu"
-            android:layout_marginBottom="@dimen/margin_large"
-            android:layout_toEndOf="@id/rela_round"
-            android:layout_toRightOf="@id/rela_round" />
 
 
     </RelativeLayout>
