--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_map.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_map.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <org.osmdroid.views.MapView
-        android:id="@+id/omap"
+
+    <com.mapbox.mapboxsdk.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-       >
+        android:layout_alignParentRight="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,14 +24,14 @@
 
 
             <androidx.appcompat.widget.AppCompatImageButton
-                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                 android:id="@+id/layer_menu"
+                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_layers"
-                android:padding="15dp" />
+                android:padding="15dp"
+                app:srcCompat="@drawable/ic_layers" />
 
         </LinearLayout>
     </ScrollView>
