--- a/collect_app/src/main/res/layouts/fieldsight/layout/fieldsight_map_activity.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fieldsight_map_activity.xml
@@ -1,105 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/linearlayout"
+    <include
+        android:id="@+id/toolbar_wrapper"
+        layout="@layout/toolbar_close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#BF000000"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="0dip">
-
-        <TextView
-            android:id="@+id/location_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="5dip"
-            android:text="@string/geopoint_instruction"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/location_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="3dip"
-            android:text="@string/please_wait_long"
-            android:textColor="#FFFFFF" />
-
-    </LinearLayout>
+        android:layout_alignParentTop="true" />
 
     <FrameLayout
         android:id="@+id/map_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linearlayout" />
+        android:layout_below="@+id/toolbar_wrapper" />
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/toolbar_wrapper"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/linearlayout">
+        android:orientation="vertical"
+        android:layout_alignParentEnd="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <!--<Button-->
-            <!--android:id="@+id/show_location"-->
-            <!--android:drawableRight="@drawable/ic_my_location_black_36dp"-->
-            <!--android:padding="15dp"-->
-            <!--android:layout_margin="5dp"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"/>-->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/zoom"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:padding="15dp"
+            app:srcCompat="@drawable/ic_my_location" />
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/place_marker"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_add_location"
-                android:padding="15dp" />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/layer_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:padding="15dp"
+            app:srcCompat="@drawable/ic_layers" />
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/zoom"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_my_location"
-                android:padding="15dp" />
+    </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/layer_menu"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_layers"
-                android:padding="15dp" />
-
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/clear"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                app:srcCompat="@drawable/ic_delete"
-                android:padding="15dp" />
-
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/accept_location"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_save"
-                android:padding="15dp" />
-        </LinearLayout>
-    </ScrollView>
 </RelativeLayout>
