--- a/collect_app/src/main/res/layouts/fieldsight/layout/fieldsight_list_fragment.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fieldsight_list_fragment.xml
@@ -14,10 +14,10 @@
     <include layout="@layout/empty_layout" />
 
     <ProgressBar
-
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
